--- a/first-party-cookies/draft-west-first-party-cookies-02.html
+++ b/first-party-cookies/draft-west-first-party-cookies-02.html
@@ -404,7 +404,7 @@
 
   <meta name="dct.creator" content="West, M." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-west-first-party-cookies-01" />
-  <meta name="dct.issued" scheme="ISO8601" content="2015-4-9" />
+  <meta name="dct.issued" scheme="ISO8601" content="2015-4-10" />
   <meta name="dct.abstract" content="This document updates RFC6265 by defining a " />
   <meta name="description" content="This document updates RFC6265 by defining a " />
 
@@ -425,14 +425,14 @@
 </tr>
 <tr>
   <td class="left">Updates: 6265 (if approved)</td>
-  <td class="right">April 9, 2015</td>
+  <td class="right">April 10, 2015</td>
 </tr>
 <tr>
   <td class="left">Intended status: Standards Track</td>
   <td class="right"></td>
 </tr>
 <tr>
-  <td class="left">Expires: October 11, 2015</td>
+  <td class="left">Expires: October 12, 2015</td>
   <td class="right"></td>
 </tr>
 
@@ -453,7 +453,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 11, 2015.</p>
+<p>This Internet-Draft will expire on October 12, 2015.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -524,25 +524,16 @@ Set-Cookie: SID=31d4d96e407aad42; First-Party-Only
 <p id="rfc.section.2.p.1">The key words &#8220;MUST&#8221;, &#8220;MUST NOT&#8221;, &#8220;REQUIRED&#8221;, &#8220;SHALL&#8221;, &#8220;SHALL NOT&#8221;, &#8220;SHOULD&#8221;, &#8220;SHOULD NOT&#8221;, &#8220;RECOMMENDED&#8221;, &#8220;MAY&#8221;, and &#8220;OPTIONAL&#8221; in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.</p>
 <p id="rfc.section.2.p.2">This specification uses the Augmented Backus-Naur Form (ABNF) notation of <a href="#RFC5234">[RFC5234]</a>.</p>
 <p id="rfc.section.2.p.3">Two sequences of octets are said to case-insensitively match each other if and only if they are equivalent under the <samp>i;ascii-casemap</samp> collation defined in <a href="#RFC4790">[RFC4790]</a>.</p>
-<p id="rfc.section.2.p.4">The terms &#8220;active document&#8221;, &#8220;ancestor browsing context&#8221;, &#8220;browsing context&#8221;, &#8220;document&#8221;, &#8220;parent browsing context&#8221;, and &#8220;top-level browsing context&#8221; are defined in the HTML Living Standard. <a href="#HTML">[HTML]</a></p>
-<p id="rfc.section.2.p.5">The term &#8220;origin&#8221;, the mechanism of deriving an origin from a URI, and the &#8220;the same&#8221; matching algorithm for origins are defined in <a href="#RFC6454">[RFC6454]</a>.</p>
+<p id="rfc.section.2.p.4">The terms &#8220;active document&#8221;, &#8220;ancestor browsing context&#8221;, &#8220;browsing context&#8221;, &#8220;document&#8221;, &#8220;iframe srcdoc document&#8221;, &#8220;parent browsing context&#8221;, and &#8220;top-level browsing context&#8221; are defined in the HTML Living Standard <a href="#HTML">[HTML]</a>.</p>
+<p id="rfc.section.2.p.5">&#8220;Web Workers&#8221;, &#8220;dedicated workers&#8221;, &#8220;owner document&#8221;, &#8220;list of relevant documents&#8221;, and &#8220;shared workers&#8221; are defined in the Web Workers specification <a href="#WORKERS">[WORKERS]</a>.</p>
+<p id="rfc.section.2.p.6">&#8220;Service Workers&#8221; are defined in the Service Workers specification <a href="#SERVICE-WORKERS">[SERVICE-WORKERS]</a>.</p>
+<p id="rfc.section.2.p.7">The term &#8220;origin&#8221;, the mechanism of deriving an origin from a URI, and the &#8220;the same&#8221; matching algorithm for origins are defined in <a href="#RFC6454">[RFC6454]</a>.</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#first-and-third-party" id="first-and-third-party">First-party and Third-party Requests</a></h1>
 <h1 id="rfc.section.2.1.1"><a href="#rfc.section.2.1.1">2.1.1.</a> <a href="#document-based-requests" id="document-based-requests">Document-based requests</a></h1>
 <p id="rfc.section.2.1.1.p.1">When considering a request generated while parsing a document, or executing script in its context, we need to consider the document&#8217;s origin as well as the origin of each of it&#8217;s ancestors, in order to determine whether the request should be considered &#8220;first-party&#8221;.</p>
 <p id="rfc.section.2.1.1.p.2">For this kind of request, the URI displayed in a user agent&#8217;s address bar is the only security context directly exposed to users, and therefore the only signal users can reasonably rely upon to determine whether or not they trust a particular website. The origin of that URI is, therefore, the &#8220;first-party origin&#8221;.</p>
 <p id="rfc.section.2.1.1.p.3">In order to prevent the kinds of &#8220;multiple-nested scenarios&#8221; described in Section 4 of <a href="#RFC7034">[RFC7034]</a>, we must check the first-party origin against the origins of each of a document&#8217;s ancestor browsing contexts&#8217; active documents.  A document is considered a &#8220;first-party context&#8221; if and only if the origin of its URI is the same as the first-party origin, <strong>and</strong> if each of the active documents in its ancestors&#8217; browsing contexts&#8217; is a first-party context.</p>
-<p id="rfc.section.2.1.1.p.4">To be more precise, given an HTTP request <samp>request</samp>, the following algorithm returns <samp>First-Party</samp> if the request is a first-party request, and <samp>Third-Party</samp> otherwise:</p>
-<p/>
-
-<ol>
-  <li>Let <samp>document</samp> be the document responsible for <samp>request</samp>.</li>
-  <li>Let <samp>top-origin</samp> be the origin of the URI of the active document in the top-level browsing context of the document responsible for <samp>request</samp>.</li>
-  <li>If <samp>document</samp>&#8217;s URI&#8217;s origin is not <samp>top-origin</samp>, return <samp>Third-Party</samp>.</li>
-  <li>While <samp>document</samp> has a parent browsing context:  <ol><li>Let <samp>document</samp> be <samp>document</samp>&#8217;s parent browsing context&#8217;s active document.</li><li>If <samp>document</samp>&#8217;s URI&#8217;s origin is not <samp>top-origin</samp>, return <samp>Third-Party</samp>.</li></ol></li>
-  <li>Return <samp>First-Party</samp>.</li>
-</ol>
-<p id="rfc.section.2.1.1.p.6">Note that we deal with the document&#8217;s location in steps 2, 3, and 4.2 above, not with the document&#8217;s origin. For example, a top-level document from <samp>https://example.com</samp> which has been sandboxed into a unique origin still creates a non-unique first-party context for subsequent requests.</p>
-<p id="rfc.section.2.1.1.p.7">This definition has a few implications:</p>
+<p id="rfc.section.2.1.1.p.4">This definition has a few implications:</p>
 <p/>
 
 <ul>
@@ -550,8 +541,50 @@ Set-Cookie: SID=31d4d96e407aad42; First-Party-Only
   <li>Full-page navigations create new first-party contexts. Notably, this includes both HTTP and <samp>&lt;meta&gt;</samp>-driven redirects.</li>
   <li><samp>&lt;iframe&gt;</samp>s do not create new first-party contexts; their requests MUST be considered in the context of the origin of the URL the user actually sees in the user agent&#8217;s address bar.</li>
 </ul>
+<p id="rfc.section.2.1.1.p.6">To be more precise, given an HTTP request <samp>request</samp>, the following algorithm returns <samp>First-Party</samp> if <samp>request</samp> is a first-party request, and <samp>Third-Party</samp> otherwise:</p>
+<p/>
+
+<ol>
+  <li>Let <samp>document</samp> be the document responsible for <samp>request</samp>.</li>
+  <li>Return <samp>First-Party</samp> if <samp>document</samp> is a first-party context, and <samp>Third-Party</samp> otherwise.</li>
+</ol>
+<p id="rfc.section.2.1.1.p.8">Given a Document <samp>document</samp>, the following algorithm returns <samp>First-Party</samp> if <samp>document</samp> is a first-party context, and <samp>Third-Party</samp> otherwise:</p>
+<p/>
+
+<ol>
+  <li>Let <samp>top-origin</samp> be the origin of the URI of the active document in the top-level browsing context of the document responsible for <samp>request</samp>.</li>
+  <li>If <samp>document</samp>&#8217;s URI&#8217;s origin is not <samp>top-origin</samp>, return <samp>Third-Party</samp>.</li>
+  <li>While <samp>document</samp> has a parent browsing context:  <ol><li>Let <samp>document</samp> be <samp>document</samp>&#8217;s parent browsing context&#8217;s active document.</li><li>If <samp>document</samp>&#8217;s URI&#8217;s origin is not <samp>top-origin</samp> and <samp>document</samp> is not an iframe srcdoc document, return <samp>Third-Party</samp>.</li></ol></li>
+  <li>Return <samp>First-Party</samp>.</li>
+</ol>
+<p id="rfc.section.2.1.1.p.10">Note that we deal with the document&#8217;s location in steps 2, 3, and 4.2 above, not with the document&#8217;s origin. For example, a top-level document from <samp>https://example.com</samp> which has been sandboxed into a unique origin still creates a non-unique first-party context for subsequent requests.</p>
 <h1 id="rfc.section.2.1.2"><a href="#rfc.section.2.1.2">2.1.2.</a> <a href="#worker-based-requests" id="worker-based-requests">Worker-based requests</a></h1>
 <p id="rfc.section.2.1.2.p.1">Worker-driven requests aren&#8217;t as clear-cut as document-driven requests, as there isn&#8217;t a clear link between a top-level browsing context and a worker.  This is especially true for Service Workers <a href="#SERVICE-WORKERS">[SERVICE-WORKERS]</a>, which may execute code in the background, without any document visible at all.</p>
+<p id="rfc.section.2.1.2.p.2">Note: The descriptions below assume that workers must be same-origin with the documents that instantiate them. If this invariant changes, we&#8217;ll need to take the worker&#8217;s script&#8217;s URI into account when determining their status.</p>
+<h1 id="rfc.section.2.1.2.1"><a href="#rfc.section.2.1.2.1">2.1.2.1.</a> <a href="#dedicated-workers" id="dedicated-workers">Dedicated Workers</a></h1>
+<p id="rfc.section.2.1.2.1.p.1">Dedicated workers are fairly straightforward to categorize, as each dedicated worker is bound to one and only one Document. Requests generated from a dedicated worker (via <samp>importScripts</samp>, <samp>XMLHttpRequest</samp>, <samp>fetch()</samp>, and so on) are first-party requests if and only if the worker&#8217;s owner document is a first-party context.</p>
+<p id="rfc.section.2.1.2.1.p.2">To be more precise, given an HTTP request <samp>request</samp>, the following algorithm returns <samp>First-Party</samp> if <samp>request</samp> is a first-party request, and <samp>Third-Party</samp> otherwise:</p>
+<p/>
+
+<ol>
+  <li>Let <samp>worker</samp> be the dedicated worker responsible for <samp>request</samp>.</li>
+  <li>Let <samp>document</samp> be <samp>worker</samp>&#8217;s owner document.</li>
+  <li>Return <samp>First-Party</samp> if <samp>document</samp> is a first-party context (as defined in section 2.1.1), and <samp>Third-Party</samp> otherwise.</li>
+</ol>
+<h1 id="rfc.section.2.1.2.2"><a href="#rfc.section.2.1.2.2">2.1.2.2.</a> <a href="#shared-workers" id="shared-workers">Shared Workers</a></h1>
+<p id="rfc.section.2.1.2.2.p.1">Shared Workers introduce the complexity of bindings to multiple Documents. As it is quite possible for a shared worker to be bound at the same time to one Document that is a first-party context, and another that isn&#8217;t, we&#8217;ll need to walk through all the documents associated with the worker to determine its status. If and only if all associated documents are first-party contexts, then the worker is a first-party context.</p>
+<p id="rfc.section.2.1.2.2.p.2">To be more precise, given an HTTP request <samp>request</samp>, the following algorithm returns <samp>First-Party</samp> if <samp>request</samp> is a first-party request, and <samp>Third-Party</samp> otherwise:</p>
+<p/>
+
+<ol>
+  <li>Let <samp>worker</samp> be the dedicated worker responsible for <samp>request</samp>.</li>
+  <li>For each <samp>document</samp> in <samp>worker</samp>&#8217;s list of relevant Documents:  <ol><li>Return <samp>Third-Party</samp> if <samp>document</samp> is not a first-party context (as defined in section 2.1.1).</li></ol></li>
+  <li>Return <samp>First-Party</samp>.</li>
+</ol>
+<h1 id="rfc.section.2.1.2.3"><a href="#rfc.section.2.1.2.3">2.1.2.3.</a> <a href="#service-workers" id="service-workers">Service Workers</a></h1>
+<p id="rfc.section.2.1.2.3.p.1">Service Workers are more complex still, as they act as a completely separate execution context, with very little relationship to the Document which registered them.</p>
+<p id="rfc.section.2.1.2.3.p.2">Until we have more implementation experience, we will consider Service Workers as third-party contexts in all cases.</p>
+<p id="rfc.section.2.1.2.3.p.3">Note: Requests which simply pass through a service worker will be handled as described above; the only requests which will be effected by this categorization are those which the service worker itself initiates (via <samp>fetch()</samp>, for instance).</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#server-requirements" id="server-requirements">Server Requirements</a></h1>
 <p id="rfc.section.3.p.1">This section describes extensions to <a href="#RFC6265">[RFC6265]</a> necessary to implement the server-side requirements of the <samp>First-Party-Only</samp> attribute.</p>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#grammar" id="grammar">Grammar</a></h1>
@@ -645,6 +678,12 @@ first-party-only-av = "First-Party-Only"
         <b id="SERVICE-WORKERS">[SERVICE-WORKERS]</b>
       </td>
       <td class="top"><a>Russell, A.</a>, <a>Song, J.</a> and <a>J. Archibald</a>, "<a href="http://www.w3.org/TR/service-workers/">Service Workers</a>", n.d..</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="WORKERS">[WORKERS]</b>
+      </td>
+      <td class="top"><a>Hickson, I.</a>, "<a href="http://www.w3.org/TR/workers/">Web Workers</a>", n.d..</td>
     </tr>
   </tbody>
 </table>
