--- a/secure-cookies/draft-west-leave-secure-cookies-alone-00.html
+++ b/secure-cookies/draft-west-leave-secure-cookies-alone-00.html
@@ -377,9 +377,10 @@
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Terminology and notation"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Recommendations"/>
-<link href="#rfc.references" rel="Chapter" title="4 References"/>
-<link href="#rfc.references.1" rel="Chapter" title="4.1 Normative References"/>
-<link href="#rfc.references.2" rel="Chapter" title="4.2 Informative References"/>
+<link href="#rfc.section.4" rel="Chapter" title="4 Security Considerations"/>
+<link href="#rfc.references" rel="Chapter" title="5 References"/>
+<link href="#rfc.references.1" rel="Chapter" title="5.1 Normative References"/>
+<link href="#rfc.references.2" rel="Chapter" title="5.2 Informative References"/>
 <link href="#rfc.appendix.A" rel="Chapter" title="A Acknowledgements"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
@@ -388,7 +389,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="West, M." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-west-leave-secure-cookies-alone" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-west-leave-secure-cookies-alone-00" />
   <meta name="dct.issued" scheme="ISO8601" content="2015-10-6" />
   <meta name="dct.abstract" content="This document updates RFC6265 by removing the ability for a non-secure origin to set cookies with a &#8216;secure&#8217; flag, and to overwrite cookies whose &#8216;secure&#8217; flag is set. This deprecation improves the isolation between HTTP and HTTPS origins, and reduces the risk of malicious interference." />
   <meta name="description" content="This document updates RFC6265 by removing the ability for a non-secure origin to set cookies with a &#8216;secure&#8217; flag, and to overwrite cookies whose &#8216;secure&#8217; flag is set. This deprecation improves the isolation between HTTP and HTTPS origins, and reduces the risk of malicious interference." />
@@ -426,7 +427,7 @@
   </table>
 
   <p class="title">Deprecate Modification of 'secure' cookies from non-secure origins<br />
-  <span class="filename">draft-west-leave-secure-cookies-alone</span></p>
+  <span class="filename">draft-west-leave-secure-cookies-alone-00</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -453,9 +454,10 @@
   	<li>1.   <a href="#rfc.section.1">Introduction</a></li>
 <li>2.   <a href="#rfc.section.2">Terminology and notation</a></li>
 <li>3.   <a href="#rfc.section.3">Recommendations</a></li>
-<li>4.   <a href="#rfc.references">References</a></li>
-<li>4.1.   <a href="#rfc.references.1">Normative References</a></li>
-<li>4.2.   <a href="#rfc.references.2">Informative References</a></li>
+<li>4.   <a href="#rfc.section.4">Security Considerations</a></li>
+<li>5.   <a href="#rfc.references">References</a></li>
+<li>5.1.   <a href="#rfc.references.1">Normative References</a></li>
+<li>5.2.   <a href="#rfc.references.2">Informative References</a></li>
 <li>Appendix A.   <a href="#rfc.appendix.A">Acknowledgements</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
 
@@ -464,27 +466,24 @@
 
   <h1 id="rfc.section.1"><a href="#rfc.section.1">1.</a> <a href="#introduction" id="introduction">Introduction</a></h1>
 <p id="rfc.section.1.p.1">Section 8.5 and Section 8.6 of <a href="#RFC6265">[RFC6265]</a> spell out some of the drawbacks of cookies&#8217; implementation: due to historical accident, non-secure origins can set cookies which will be delivered to secure origins in a manner indistinguishable from cookies set by that origin itself. This enables a number of attacks, which have been recently spelled out in some detail in <a href="#COOKIE-INTEGRITY">[COOKIE-INTEGRITY]</a>.</p>
-<p id="rfc.section.1.p.2">We can mitigate the risk of these attacks by making it more difficult for non-secure origins to influence the state of secure origins. Accordingly, this document recommends the deprecation and removal of non-secure origins&#8217; ability to write cookies with a &#8216;secure&#8217; flag, and their ability to overwrite cookies whose &#8216;secure&#8217; flag is set with a non-secure variant.</p>
+<p id="rfc.section.1.p.2">We can mitigate the risk of these attacks by making it more difficult for non-secure origins to influence the state of secure origins. Accordingly, this document recommends the deprecation and removal of non-secure origins&#8217; ability to write cookies with a &#8216;secure&#8217; flag, and their ability to overwrite cookies whose &#8216;secure&#8217; flag is set.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#terminology-and-notation" id="terminology-and-notation">Terminology and notation</a></h1>
 <p id="rfc.section.2.p.1">The key words &#8220;MUST&#8221;, &#8220;MUST NOT&#8221;, &#8220;REQUIRED&#8221;, &#8220;SHALL&#8221;, &#8220;SHALL NOT&#8221;, &#8220;SHOULD&#8221;, &#8220;SHOULD NOT&#8221;, &#8220;RECOMMENDED&#8221;, &#8220;MAY&#8221;, and &#8220;OPTIONAL&#8221; in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.</p>
+<p id="rfc.section.2.p.2">The <samp>scheme</samp> component of a URI is defined in Section 3 of <a href="#RFC3986">[RFC3986]</a>.</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#recommendations" id="recommendations">Recommendations</a></h1>
 <p id="rfc.section.3.p.1">This document updates Section 5.3 of <a href="#RFC6265">[RFC6265]</a> as follows:</p>
 <p/>
 
 <ol>
-  <li>After step 8 of the current algorithm, which sets the cookie&#8217;s <samp>secure-only-flag</samp>, execute the following step:  <ol><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> is not &#8220;https&#8221;, and the cookie&#8217;s <samp>secure-only-flag</samp> is <samp>true</samp>, then abort these steps and ignore the newly created cookie entirely.</li></ol></li>
-  <li>Before step 3 of step 11 of the current algorithm, execute the following step:  <ol><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> is not &#8220;https&#8221;, and the <samp>old-cookie</samp>&#8217;s <samp>secure-only-flag</samp> is set, then abort these steps and ignore the newly create cookie entirely.</li></ol></li>
+  <li>After step 8 of the current algorithm, which sets the cookie&#8217;s <samp>secure-only-flag</samp>, execute the following step:  <ol start="9"><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> is not &#8220;https&#8221;, and the cookie&#8217;s <samp>secure-only-flag</samp> is <samp>true</samp>, then abort these steps and ignore the newly created cookie entirely.</li></ol></li>
+  <li>Before step 3 of step 11 of the current algorithm, execute the following step:  <ol start="3"><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> is not &#8220;https&#8221;, and the <samp>old-cookie</samp>&#8217;s <samp>secure-only-flag</samp> is set, then abort these steps and ignore the newly create cookie entirely.</li></ol></li>
 </ol>
-<h1 id="rfc.references"><a href="#rfc.references">4.</a> References</h1>
-<h1 id="rfc.references.1"><a href="#rfc.references.1">4.1.</a> Normative References</h1>
+<h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#security-considerations" id="security-considerations">Security Considerations</a></h1>
+<p id="rfc.section.4.p.1">This specification increases a site&#8217;s confidence that secure cookies it sets will remain unmodified by insecure pages on hosts which it &#8216;domain-match&#8217;s.  Ideally, sites would use HSTS as described in <a href="#RFC6797">[RFC6797]</a> to defend more robustly against the dangers of non-secure transport in general, but until adoption of that protection becomes ubiquitous, this deprecation this document recommends will mitigate a number of risks.</p>
+<h1 id="rfc.references"><a href="#rfc.references">5.</a> References</h1>
+<h1 id="rfc.references.1"><a href="#rfc.references.1">5.1.</a> Normative References</h1>
 <table>
   <tbody>
-    <tr>
-      <td class="reference">
-        <b id="HTML">[HTML]</b>
-      </td>
-      <td class="top"><a title="Google, Inc.">Hickson, I.</a>, "<a href="https://html.spec.whatwg.org/">HTML Living Standard</a>", n.d..</td>
-    </tr>
     <tr>
       <td class="reference">
         <b id="RFC2119">[RFC2119]</b>
@@ -493,31 +492,19 @@
     </tr>
     <tr>
       <td class="reference">
+        <b id="RFC3986">[RFC3986]</b>
+      </td>
+      <td class="top"><a>Berners-Lee, T.</a>, <a>Fielding, R.</a> and <a>L. Masinter</a>, "<a href="http://tools.ietf.org/html/rfc3986">Uniform Resource Identifier (URI): Generic Syntax</a>", STD 66, RFC 3986, DOI 10.17487/RFC3986, January 2005.</td>
+    </tr>
+    <tr>
+      <td class="reference">
         <b id="RFC6265">[RFC6265]</b>
       </td>
       <td class="top"><a>Barth, A.</a>, "<a href="http://tools.ietf.org/html/rfc6265">HTTP State Management Mechanism</a>", RFC 6265, DOI 10.17487/RFC6265, April 2011.</td>
     </tr>
-    <tr>
-      <td class="reference">
-        <b id="RFC6454">[RFC6454]</b>
-      </td>
-      <td class="top"><a>Barth, A.</a>, "<a href="http://tools.ietf.org/html/rfc6454">The Web Origin Concept</a>", RFC 6454, DOI 10.17487/RFC6454, December 2011.</td>
-    </tr>
-    <tr>
-      <td class="reference">
-        <b id="RFC7034">[RFC7034]</b>
-      </td>
-      <td class="top"><a>Ross, D.</a> and <a>T. Gondrom</a>, "<a href="http://tools.ietf.org/html/rfc7034">HTTP Header Field X-Frame-Options</a>", RFC 7034, DOI 10.17487/RFC7034, October 2013.</td>
-    </tr>
-    <tr>
-      <td class="reference">
-        <b id="RFC7231">[RFC7231]</b>
-      </td>
-      <td class="top"><a>Fielding, R.</a> and <a>J. Reschke</a>, "<a href="http://tools.ietf.org/html/rfc7231">Hypertext Transfer Protocol (HTTP/1.1): Semantics and Content</a>", RFC 7231, DOI 10.17487/RFC7231, June 2014.</td>
-    </tr>
   </tbody>
 </table>
-<h1 id="rfc.references.2"><a href="#rfc.references.2">4.2.</a> Informative References</h1>
+<h1 id="rfc.references.2"><a href="#rfc.references.2">5.2.</a> Informative References</h1>
 <table>
   <tbody>
     <tr>
@@ -525,6 +512,12 @@
         <b id="COOKIE-INTEGRITY">[COOKIE-INTEGRITY]</b>
       </td>
       <td class="top"><a title="Tsinghua University and Tsinghua National Laboratory for Information Science and Technology">Zheng, X.</a>, <a title="University of California, Berkeley">Jiang, J.</a>, <a title="Tsinghua University and Tsinghua National Laboratory for Information Science and Technology;">Liang, J.</a>, <a title="Tsinghua University, Tsinghua National Laboratory for Information Science and Technology, and International Computer Science Institute;">Duan, H.</a>, <a title="Microsoft Research Redmond;">Chen, S.</a>, <a title="Huawei Canada">Wan, T.</a> and <a title="International Computer Science Institute and University of California, Berkeley">N. Weaver</a>, "<a href="https://www.usenix.org/system/files/conference/usenixsecurity15/sec15-paper-zheng.pdf">Cookies Lack Integrity: Real-World Implications</a>", n.d..</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="RFC6797">[RFC6797]</b>
+      </td>
+      <td class="top"><a>Hodges, J.</a>, <a>Jackson, C.</a> and <a>A. Barth</a>, "<a href="http://tools.ietf.org/html/rfc6797">HTTP Strict Transport Security (HSTS)</a>", RFC 6797, DOI 10.17487/RFC6797, November 2012.</td>
     </tr>
   </tbody>
 </table>
