--- a/secure-cookies/draft-west-leave-secure-cookies-alone-00.html
+++ b/secure-cookies/draft-west-leave-secure-cookies-alone-00.html
@@ -5,7 +5,7 @@
 <head profile="http://www.w3.org/2006/03/hcard http://dublincore.org/documents/2008/08/04/dc-html/">
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
 
-  <title>Deprecate Modification of 'secure' cookies from non-secure origins</title>
+  <title>Deprecate modification of 'secure' cookies from non-secure origins</title>
 
   <style type="text/css" title="Xml2Rfc (sans serif)">
   /*<![CDATA[*/
@@ -426,7 +426,7 @@
     </tbody>
   </table>
 
-  <p class="title">Deprecate Modification of 'secure' cookies from non-secure origins<br />
+  <p class="title">Deprecate modification of 'secure' cookies from non-secure origins<br />
   <span class="filename">draft-west-leave-secure-cookies-alone-00</span></p>
   
   <h1 id="rfc.abstract">
