--- a/secure-cookies/draft-west-leave-secure-cookies-alone-00.html
+++ b/secure-cookies/draft-west-leave-secure-cookies-alone-00.html
@@ -389,8 +389,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="West, M." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-west-leave-secure-cookies-alone-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2015-10-6" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-west-leave-secure-cookies-alone-01" />
+  <meta name="dct.issued" scheme="ISO8601" content="2015-10-8" />
   <meta name="dct.abstract" content="This document updates RFC6265 by removing the ability for a non-secure origin to set cookies with a &#8216;secure&#8217; flag, and to overwrite cookies whose &#8216;secure&#8217; flag is set. This deprecation improves the isolation between HTTP and HTTPS origins, and reduces the risk of malicious interference." />
   <meta name="description" content="This document updates RFC6265 by removing the ability for a non-secure origin to set cookies with a &#8216;secure&#8217; flag, and to overwrite cookies whose &#8216;secure&#8217; flag is set. This deprecation improves the isolation between HTTP and HTTPS origins, and reduces the risk of malicious interference." />
 
@@ -411,14 +411,14 @@
 </tr>
 <tr>
   <td class="left">Updates: 6265 (if approved)</td>
-  <td class="right">October 6, 2015</td>
+  <td class="right">October 8, 2015</td>
 </tr>
 <tr>
   <td class="left">Intended status: Standards Track</td>
   <td class="right"></td>
 </tr>
 <tr>
-  <td class="left">Expires: April 8, 2016</td>
+  <td class="left">Expires: April 10, 2016</td>
   <td class="right"></td>
 </tr>
 
@@ -427,7 +427,7 @@
   </table>
 
   <p class="title">Deprecate modification of 'secure' cookies from non-secure origins<br />
-  <span class="filename">draft-west-leave-secure-cookies-alone-00</span></p>
+  <span class="filename">draft-west-leave-secure-cookies-alone-01</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -439,7 +439,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on April 8, 2016.</p>
+<p>This Internet-Draft will expire on April 10, 2016.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -475,11 +475,11 @@
 <p/>
 
 <ol>
-  <li>After step 8 of the current algorithm, which sets the cookie&#8217;s <samp>secure-only-flag</samp>, execute the following step:  <ol start="9"><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> is not &#8220;https&#8221;, and the cookie&#8217;s <samp>secure-only-flag</samp> is <samp>true</samp>, then abort these steps and ignore the newly created cookie entirely.</li></ol></li>
-  <li>Before step 3 of step 11 of the current algorithm, execute the following step:  <ol start="3"><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> is not &#8220;https&#8221;, and the <samp>old-cookie</samp>&#8217;s <samp>secure-only-flag</samp> is set, then abort these steps and ignore the newly create cookie entirely.</li></ol></li>
+  <li>After step 8 of the current algorithm, which sets the cookie&#8217;s <samp>secure-only-flag</samp>, execute the following step:  <ol><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> does not denote a &#8220;secure&#8221; protocol (as defined by the user agent), and the cookie&#8217;s <samp>secure-only-flag</samp> is <samp>true</samp>, then abort these steps and ignore the newly created cookie entirely.</li></ol></li>
+  <li>Before step 3 of step 11 of the current algorithm, execute the following step:  <ol><li>If the <samp>scheme</samp> component of the <samp>request-uri</samp> does not denote a &#8220;secure&#8221; protocol (as defined by the user agent), and the <samp>old-cookie</samp>&#8217;s <samp>secure-only-flag</samp> is set, then abort these steps and ignore the newly create cookie entirely.</li></ol></li>
 </ol>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#security-considerations" id="security-considerations">Security Considerations</a></h1>
-<p id="rfc.section.4.p.1">This specification increases a site&#8217;s confidence that secure cookies it sets will remain unmodified by insecure pages on hosts which it &#8216;domain-match&#8217;s.  Ideally, sites would use HSTS as described in <a href="#RFC6797">[RFC6797]</a> to defend more robustly against the dangers of non-secure transport in general, but until adoption of that protection becomes ubiquitous, this deprecation this document recommends will mitigate a number of risks.</p>
+<p id="rfc.section.4.p.1">This specification increases a site&#8217;s confidence that secure cookies it sets will remain unmodified by insecure pages on hosts which it domain-matches.  Ideally, sites would use HSTS as described in <a href="#RFC6797">[RFC6797]</a> to defend more robustly against the dangers of non-secure transport in general, but until adoption of that protection becomes ubiquitous, this deprecation this document recommends will mitigate a number of risks.</p>
 <h1 id="rfc.references"><a href="#rfc.references">5.</a> References</h1>
 <h1 id="rfc.references.1"><a href="#rfc.references.1">5.1.</a> Normative References</h1>
 <table>
