--- a/cookie-priority/draft-west-cookie-priority-00.html
+++ b/cookie-priority/draft-west-cookie-priority-00.html
@@ -415,7 +415,7 @@
 </tr>
 <tr>
   <td class="left">Internet-Draft</td>
-  <td class="right"></td>
+  <td class="right">Shopify</td>
 </tr>
 <tr>
   <td class="left">Updates: 6265 (if approved)</td>
@@ -423,14 +423,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Standards Track</td>
-  <td class="right">Google</td>
-</tr>
-<tr>
-  <td class="left">Expires: September 4, 2016</td>
   <td class="right">M. West</td>
 </tr>
 <tr>
-  <td class="left"></td>
+  <td class="left">Expires: September 4, 2016</td>
   <td class="right">Google, Inc</td>
 </tr>
 <tr>
@@ -614,7 +610,7 @@ priority-value = "Low" / "Medium" / "High"
 		<span class="family-name">Wright</span>
 	  </span>
 	</span>
-	<span class="org vcardline"></span>
+	<span class="org vcardline">Shopify</span>
 	<span class="adr">
 	  
 	  <span class="vcardline">
@@ -634,7 +630,7 @@ priority-value = "Low" / "Medium" / "High"
 		<span class="family-name">Huang</span>
 	  </span>
 	</span>
-	<span class="org vcardline">Google</span>
+	<span class="org vcardline">Google, Inc</span>
 	<span class="adr">
 	  
 	  <span class="vcardline">
